--- a/example4/style.css
+++ b/example4/style.css
@@ -1,16 +1,26 @@
+:root {
+    --text-color: white;
+    --background-color:#880e4f;
+    --accent-color: #fdd835;
+}
+
 *{
     padding: 0;
     margin: 0;
     font-family: 'Mali', cursive;
+}
+a { 
+    text-decoration: none;
+    color: var(--text-color);
 }
 
 .nav-bar {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #880e4f;
+    background-color: var(--background-color);
     padding: 20px;
-    color: white;
+    color: var(--text-color);
 }
 
 .nav-bar__logo {
@@ -19,39 +29,46 @@
 }
 
 .nav-bar__logo i {
-    color:#fdd835;
+    color: var(--accent-color);
     font-size: 25px;
     margin-right: 3px;
 }
 
 .nav-bar__logo a {
-    text-decoration: none;
-    color: white;
-}
+    font-weight: 600;
+}  
+
 
 .nav-bar__menu {
     display: flex;
+    align-items: center;
     list-style: none;
 }
 
 .nav-bar__menu li {
-    padding:10px;
+    padding: 5px 10px;
+}
+
+.nav-bar__menu li:hover {
+    background-color: var(--accent-color);
+    border-radius: 8px;
 }
 
 .nav-bar__icons {
     display: flex;
     list-style: none;
+    color:var(--text-color);
 }
 
 .nav-bar__icons li {
     padding: 3px;
 }
 
-.nav-bar__tooglebtn {
+.nav-bar__toogleBtn {
     position: absolute;
     right: 30px;
     font-size: 20px;
-    color: #fdd835;
+    color: var(--accent-color);
     display: none;
 }
 
@@ -59,30 +76,37 @@
 @media screen and (max-width:600px) {
 
     .nav-bar {
-        
         flex-direction: column;
         align-items: flex-start;
+        
     }
 
     .nav-bar__menu {
-        
+        display: none;
         flex-direction: column;
         align-items: center;
         width: 100%;
     }
-
+  
     .nav-bar__menu li {
         width: 100%;
         text-align: center;
     }
 
+
     .nav-bar__icons {
-       justify-content: center;
+        display: none;
+        justify-content: center;
         width: 100%;
     }
-    .nav-bar__tooglebtn {
+
+    .nav-bar__toogleBtn {
         display: block;
     }
 
+    .nav-bar__menu.active,
+    .nav-bar__icons.active {
+        display: flex;
+    }
 }
         
