--- a/lifecoding/style.css
+++ b/lifecoding/style.css
@@ -19,6 +19,10 @@ a {
         margin:0;
     }
   
+    #player {
+       display: flex;
+       justify-content: center;
+    }
    
 
     #grid{
